@@ -90,7 +90,7 @@ static const GtkStockItem gnubg_stock_items[] = {
 	{GNUBG_STOCK_REJECT, N_("_Reject"), 0, 0, NULL},
 	{GNUBG_STOCK_HINT, N_("_Hint"), 0, 0, NULL},
 	{GNUBG_STOCK_DOUBLE, N_("_Double"), 0, 0, NULL},
-	{GNUBG_STOCK_QUICK_GAME, N_("_Quick Game"), 0, 0, NULL},
+	{GNUBG_STOCK_END_GAME, N_("_End Game"), 0, 0, NULL},
 	{GNUBG_STOCK_RESIGN, N_("_Resign"), 0, 0, NULL},
 };
 
@@ -111,8 +111,8 @@ static const struct {
 	GNUBG_STOCK_RESIGN, resign_24, NULL, GTK_ICON_SIZE_LARGE_TOOLBAR}, {
 	GNUBG_STOCK_DOUBLE, double_16, NULL, GTK_ICON_SIZE_MENU}, {
 	GNUBG_STOCK_DOUBLE, double_24, NULL, GTK_ICON_SIZE_LARGE_TOOLBAR}, {
-	GNUBG_STOCK_QUICK_GAME, runit_16, NULL, GTK_ICON_SIZE_MENU}, {
-	GNUBG_STOCK_QUICK_GAME, runit_24, NULL, GTK_ICON_SIZE_LARGE_TOOLBAR}
+	GNUBG_STOCK_END_GAME, runit_16, NULL, GTK_ICON_SIZE_MENU}, {
+	GNUBG_STOCK_END_GAME, runit_24, NULL, GTK_ICON_SIZE_LARGE_TOOLBAR}
 };
 
 /**
