@@ -3,5 +3,5 @@ void gnubg_stock_init(void);
 #define GNUBG_STOCK_REJECT "gnubg-stock-reject"
 #define GNUBG_STOCK_DOUBLE "gnubg-stock-double"
 #define GNUBG_STOCK_HINT "gnubg-stock-hint"
-#define GNUBG_STOCK_QUICK_GAME "gnubg-stock-quick-game"
+#define GNUBG_STOCK_END_GAME "gnubg-stock-end-game"
 #define GNUBG_STOCK_RESIGN "gnubg-stock-resign"
